# tfm-tattersalls

./: .gitignore  01_Data_Preparation.ipynb  01_EDA.ipynb  02_EDA_Analysis.ipynb  03_FeatureEngineering.ipynb  LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/: 01_Data_Preparation.ipynb  02_EDA_Analysis.ipynb  03_FeatureEngineering.ipynb  04_Modeling.ipynb  05_Model_Audit.ipynb
outputs/analyses/: ablation_vendor_buybacks_entity_impact.csv  ablation_vendor_buybacks_summary.csv  audit_clf_predictions.parquet  audit_reg_predictions.parquet  audit_universe_predictions.parquet  conclusions.md
src/: __init__.py  ablation_vendor_buybacks.py  audit.py  constants.py  data_prep.py  evaluation.py  features.py  final_audit.py  model_wrappers.py  modeling.py  placement_products.py  save_model_artifacts.py  save_models.py  sensors.py
tests/: test_smoke.py
