[project]
name = "tfm-tattersalls"
version = "1.0.0"
description = "Predictive Modelling for Horse Auction Prices — TFM UNAV"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "ipykernel",
    "matplotlib",
    "requests",
    "rapidfuzz",
    "onspy",
    "scipy-stubs",
    "plotly",
    "seaborn",
    "scipy",
    "pyarrow",
    "fastparquet",
    "scikit-learn>=1.5.0",
    "yfinance",
    "beautifulsoup4",
    "mlflow>=2.12",
    "optuna>=3.6",
    "optuna-integration[mlflow]",
    "catboost>=1.2",
    "pytest>=7.0",
    "joblib",
    "shap",
    "statsmodels",
    "lightgbm",
    "xgboost",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100
